# NumsimNN

./: diffusion.org  eval.py  main.py  pyproject.toml  train.org  training.py  unet.py
src/: attention.py  cnn.py  embedding.py  encoder.py  eval.py  settings.txt  train_diffusion.py  training.py  trainingdata.py  unet.py
