[project]
name = "numsimnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.3.5",
  "pandas>=2.3.3",
  "matplotlib>=3.10.7",
  "tqdm>=4.67.1",
  "jupyter>=1.1.1",
  "ipython>=9.8.0",
  "tensorboard>=2.20.0",
  "pyvista>=0.46.4",
  "pyyaml>=6.0.3",
]

[project.optional-dependencies]
cpu = ["torch", "torchvision"]
xpu = ["torch", "torchvision" , "pytorch-triton-xpu"]
cuda = ["torch", "torchvision"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra="cpu" },
  { index = "pytorch-xpu", extra="xpu" },
  { index = "pytorch-cuda", extra="cuda" },
]
torchvision = [
  { index = "pytorch-cpu", extra="cpu" },
  { index = "pytorch-xpu", extra="xpu" },
  { index = "pytorch-cuda", extra="cuda" },
]
pytorch-triton-xpu = [
  { index = "pytorch-xpu", extra="xpu" },
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda" },
    { extra = "xpu" },
  ],
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true
[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
